--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -132,6 +132,9 @@
   <data name="TITLE_REQUIRED" xml:space="preserve">
     <value>The title is required</value>
   </data>
+  <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
+    <value>Expense not found</value>
+  </data>
   <data name="UNKNOWN_ERROR" xml:space="preserve">
     <value>Unknow error</value>
   </data>
