--- a/src/ClashFlow.Domain/Messages/Reports/ResourceReportGenerationMessages.resx
+++ b/src/ClashFlow.Domain/Messages/Reports/ResourceReportGenerationMessages.resx
@@ -156,4 +156,7 @@
   <data name="TOTAL_SPENT_IN" xml:space="preserve">
     <value>Total spent in {0}</value>
   </data>
+  <data name="USER_ALREADY_EXISTS" xml:space="preserve">
+    <value>The user already exists</value>
+  </data>
 </root>
