--- a/src/CashFlow.Exception/ResourceErrorMessages.resx
+++ b/src/CashFlow.Exception/ResourceErrorMessages.resx
@@ -132,6 +132,9 @@
   <data name="EXPENSE_NOT_FOUND" xml:space="preserve">
     <value>Expense not found</value>
   </data>
+  <data name="PASSWORD_DIFFERENT_CURRENT_PASSWORD" xml:space="preserve">
+    <value>Password is different of current password</value>
+  </data>
   <data name="PAYMENT_TYPE_ENUM" xml:space="preserve">
     <value>The payment type is EPaymentTypeEnum</value>
   </data>
